 • New flak explosion effect + custom crashing airplane smoke trails
 • Removed dgun range circle when enemy com gets near
 • Reduced footprint of engine replacement trees + tree fire wont spread as wildly
 • Resized and tuned proportions of BAR (remodeled) units to match their BA counterparts more (modoption barmodels)
 • Auto sets 10000 particles as minimum


10.12 -> 10.13
29/09/2018

Balance:
 • Reverted the global 10% reclaimspeed nerf (see 10.00)

Other:
 • Fixed "Set Target Default" erroring at game start
 • Fixed some missing water-splash effects
 • Fixed: The new "Contain mouse" option should show up in the options this time
 • Fixed: Auto disabling map widgets: *Mearth Location Tags*1.0 (render errors) and "Ambient player" (DsD v8)


10.11 -> 10.12
16/09/2018

IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.

Balance:
 • Testing splitting ballistic missiles for T2 missile ships (splits into 6 (arm) or 8(core) projectiles)
 • Continuous aiming: units readjust their aim much more often + start aiming when enemy is still at maxrange + 10%
 • EMP spider auto heals itself with 15hp per second (ba9.37 had 30 before it was removed)
 • Ships/Sea wrecks durability increased ("health" + 100%)
 • Floating mine AoE reduced 30%, damages to subs from 1750 -> 1100, edge effectiveness from 1.00 -> 0.65
 • Toaster range 1335 -> 1390, Ambusher range 1320 -> 1380
 • MERL range 1215 -> 1300, Diplomat range 1240 -> 1310

Other:
 • Engine replacement trees can be set on fire! The fire can propagate and even cause slight damages.
 • Added option "Resolution" (might freeze engine... in windowed mode)
 • Added option "Move Window Position"
 • Added option "Contain mouse"
 • Added option "Tree Wind" (before it was only active when barmodels enabled)
 • Added options "Camera smoothing" and "Tracking cam smoothing" slider
 • Camara tracking limits view to the tracked player's viewpoint and sight