@@ -25,6 +25,7 @@ Other:
  • Removed dgun range circle when enemy com gets near
  • Reduced footprint of engine replacement trees + tree fire wont spread as wildly
  • Resized and tuned proportions of BAR (remodeled) units to match their BA counterparts more (modoption barmodels)
+ • Added option: "Icon scale"
  • Auto sets 10000 particles as minimum
 
 
